--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
             </div>
             <div class="bottom">
                 <div class="left">
-                    <div>
+                    <div class="a">
                         <div class="dot"></div>
                         <div class="text">
                             Тренди в beauty, <br>які будуть актуальні <br>мінімум 5 років
                         </div>
                     </div>
-                    <div>
+                    <div class="b">
                         <div class="dot"></div>
                         <div class="text">
                             Робимо ідеальний <br>нюдовий макіяж в <br>real time
                         </div>
                     </div>
-                    <div>
+                    <div class="c">
                         <div class="dot"></div>
                         <div class="text">
                             Покрокова стратегія для <br>візажистів, яка принесе <br>вам впізнаваність і гроші
@@ -58,6 +58,76 @@
                     <div class="bonus">
                         <img src="assets/images/abs-star.svg" alt="">
                         <div class="color-white fixel-regular">Секретні бонуси</div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="about">
+            <div class="offer">
+                <img src="assets/images/wow-icon.png" alt="" class="abs">
+                <div class="text basenji-extralight uppercase">
+                    Урочисте <span class="uppercase">відкриття <br>продажів</span> на мій <br>авторський курс
+                </div>
+                <div class="line">
+
+                </div>
+                <div class="title ">
+                    <div class="text basenji-extralight">
+                        <span>beauty<img src="assets/images/icon.png" alt="" class="abs"></span>
+                        <span class="hidden">hidden</span>
+                    </div>
+                </div>
+            </div>
+            <div class="prize">
+                <div class="left">
+                    <div class="offer-text">
+                        <div class="uppercase basenji-extralight">Одна з вас може стати</div>
+                        <div class="uppercase basenji-light">головною героїнею шоу</div>
+                    </div>
+                    <div class="expert">
+                        <img src="assets/images/expert-icon.png" alt="">
+                        <div class="text fixel-regular">і виграти <br>перевтілення <br>від мене</div>
+                    </div>
+                </div>
+                <div class="right">
+                    <div class="img">
+                        <img src="assets/images/expert.png" alt="">
+                        <img src="assets/images/question.png" alt="" class="abs">
+                        <img src="assets/images/question.png" alt="" class="abs">
+                        <img src="assets/images/question.png" alt="" class="abs">
+                    </div>
+                </div>
+            </div>
+            <div class="info">
+                <div class="grid">
+                    <div>
+                        <div class="text">
+                            <img src="assets/images/abs-lips.svg" alt="">
+                            <div class="fixel-regular">Ти <span class="fixel-semibold">хочеш навчитись фарбувати <br></span> себе — щоб відчувати себе
+                                <br>красивою і впевненою.</div>
+                        </div>
+                        <div class="img">
+                            <img src="assets/images/grid-1.png" alt="">
+                        </div>
+                    </div>
+                    <div>
+                        <div class="img">
+                            <img src="assets/images/grid-2.png" alt="">
+                        </div>
+                        <div class="text">
+                            <img src="assets/images/abs-star.svg" alt="">
+                            <div class="fixel-regular">Ти мрієш <span class="fixel-semibold">стати візажистом<br></span> — щоб змінити своє життя,<br> заробляти і творити.</div>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="text">
+                            <img src="assets/images/make-icon.png" alt="">
+                            <div class="fixel-regular"><span class="fixel-semibold">Ти вже майстер — але хочеш <br>більше:</span> медійність, більший
+                                <br>дохід, вищий чек, повагу і <br>колаборації з відомими <br>брендами.</div>
+                        </div>
+                        <div class="img">
+                            <img src="assets/images/grid-3.png" alt="">
+                        </div>
                     </div>
                 </div>
             </div>
