--- a/index.html
+++ b/index.html
@@ -132,6 +132,23 @@
                 </div>
             </div>
         </section>
+        <section class="offer">
+            <img src="assets/images/box-abs.png" alt="" class="abs">
+            <img src="assets/images/make-icon.png" alt="" class="abs-2">
+            <div class="form">
+                <div class="content">
+                    <div class="action">
+                        <div class="title">
+                            <div class="basenji-extralight">Заповнюй та</div>
+                            <div class="basenji-extralight">одразу отримуй</div>
+                            <div class="basenji-extralight">Кодекс Візажиста</div>
+                        </div>
+                        <a href="https://beauty-icon.egormuasсhool.com.ua/apply" target="_blank" class="button pulse"><span class="fixel-semibold">ЗАРЕЄСТРУВАТИСЯ</span><img src="assets/images/arrow-white-2.svg" alt=""></a>
+                    </div>
+                    <img src="assets/images/test.gif" alt="" class="mobile">
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
