--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             </div>
             <div class="bottom">
                 <div class="left">
+                    <img src="assets/images/abs-lips.svg" alt="" class="abs">
                     <div class="a">
                         <div class="dot"></div>
                         <div class="text">
@@ -138,6 +139,7 @@
             <div class="form">
                 <div class="content">
                     <div class="action">
+                        <img src="assets/images/abs-lips.svg" alt="" class="abs-mobile">
                         <div class="title">
                             <div class="basenji-extralight">Заповнюй та</div>
                             <div class="basenji-extralight">одразу отримуй</div>
