--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     </div>
                 </div>
                 <div class="center">
-                    <a href="/" target="_blank" class="button pulse"><span class="fixel-semibold">ЗАРЕЄСТРУВАТИСЯ</span><img src="assets/images/arrow-white-2.svg" alt=""></a>
+                    <a href="" target="_blank" class="button pulse"><span class="fixel-semibold">ЗАРЕЄСТРУВАТИСЯ</span><img src="assets/images/arrow-white-2.svg" alt=""></a>
                     <div class="text">
                         <div class="fixel-bold">Хочеш бути серед перших?</div>
                         <div class="fixel-regular">Встигни потрапити до списку <br>учасників ще до відкриття набору!</div>
@@ -166,7 +166,7 @@
                             <div class="basenji-extralight">одразу отримуй</div>
                             <div class="basenji-extralight">Кодекс Візажиста</div>
                         </div>
-                        <a href="/" target="_blank" class="button pulse"><span class="fixel-semibold">ЗАРЕЄСТРУВАТИСЯ</span><img src="assets/images/arrow-white-2.svg" alt=""></a>
+                        <a href="" target="_blank" class="button pulse"><span class="fixel-semibold">ЗАРЕЄСТРУВАТИСЯ</span><img src="assets/images/arrow-white-2.svg" alt=""></a>
                     </div>
                     <img src="assets/images/test.gif" alt="" class="mobile">
                 </div>
