--- a/index.html
+++ b/index.html
@@ -1,6 +1,21 @@
 <!doctype html>
 <html lang="uk">
 <head>
+
+    <meta content="BEAUTY ICON SHOW - Перше в Україні
+        онлайн-шоу з макіяжу від Єгора Андрюшина" name="description">
+    <meta content="BEAUTY ICON SHOW - Перше в Україні
+        онлайн-шоу з макіяжу від Єгора Андрюшина" property="og:title">
+    <meta content="BEAUTY ICON SHOW - Перше в Україні
+        онлайн-шоу з макіяжу від Єгора Андрюшина" property="og:description">
+    <meta content="" property="og:image">
+    <meta content="BEAUTY ICON SHOW - Перше в Україні
+        онлайн-шоу з макіяжу від Єгора Андрюшина" property="twitter:title">
+    <meta content="BEAUTY ICON SHOW - Перше в Україні
+        онлайн-шоу з макіяжу від Єгора Андрюшина" property="twitter:description">
+    <meta content="" property="twitter:image">
+    <meta property="og:type" content="website">
+    <meta content="summary_large_image" name="twitter:card">
     <link rel="apple-touch-icon-precomposed" sizes="57x57" href="assets/apple-touch-icon-57x57.png" />
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/apple-touch-icon-114x114.png" />
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/apple-touch-icon-72x72.png" />
@@ -27,6 +42,8 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="common.css">
+    <script src="index.js"></script>
     <title>BEAUTY ICON SHOW - Перше в Україні
         онлайн-шоу з макіяжу</title>
 </head>
@@ -36,9 +53,8 @@
             <div class="top">
                 <div class="left fixel-regular">Перше в Україні <br> онлайн-шоу з макіяжу </div>
                 <div class="img">
-
                 </div>
-                <div class="right fixel-regular"> від зіркового мейкап- <br>артиста<span class="fixel-semibold"> Єгора Андрюшина</span></div>
+                <div class="right fixel-regular"> від зіркового мейкап-<br>артиста<span class="fixel-semibold"> Єгора Андрюшина</span></div>
             </div>
             <div class="title basenji-extralight">
                 <div class="marquee-text basenji-extralight">beauty icon</div>
