--- a/apply/index.html
+++ b/apply/index.html
@@ -118,7 +118,7 @@
                                     Твій номер телефону<br>
                                     <input type="tel" name="Номер телефону" pattern="^(\+?\d{10,15})$" required>
                                 </label>
-                                <button class="button pulse" id="submit-btn">
+                                <button class="button pulse" id="submit-btn" style="display: none;">
                                     <div class="dot-spinner">
                                         <div class="dot-spinner__dot"></div>
                                         <div class="dot-spinner__dot"></div>
@@ -131,6 +131,9 @@
                                     </div>
                                     <span class="fixel-semibold">НАДІСЛАТИ</span><img src="../assets/images/arrow-white-2.svg" alt="" class="arrow">
                                 </button>
+                                <a href="https://ivansavchuk7.github.io/beauty_show/finish" class="button pulse">
+                                    <span class="fixel-semibold">НАДІСЛАТИ</span><img src="../assets/images/arrow-white-2.svg" alt="" class="arrow">
+                                </a>
                             </div>
                         </form>
                     </div>
