--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="common.css">
+    <link rel="stylesheet" href="style.css">
     <script src="index.js"></script>
     <title>BEAUTY ICON SHOW - Перше в Україні
         онлайн-шоу з макіяжу</title>
@@ -83,7 +83,7 @@
                     </div>
                 </div>
                 <div class="center">
-                    <a href="" target="_blank" class="button pulse"><span class="fixel-semibold">ЗАРЕЄСТРУВАТИСЯ</span><img src="assets/images/arrow-white-2.svg" alt=""></a>
+                    <a href="https://ivansavchuk7.github.io/beauty_show/apply" target="_blank" class="button pulse"><span class="fixel-semibold">ЗАРЕЄСТРУВАТИСЯ</span><img src="assets/images/arrow-white-2.svg" alt=""></a>
                     <div class="text">
                         <div class="fixel-bold">Хочеш бути серед перших?</div>
                         <div class="fixel-regular">Встигни потрапити до списку <br>учасників ще до відкриття набору!</div>
@@ -183,7 +183,7 @@
                             <div class="basenji-extralight">одразу отримуй</div>
                             <div class="basenji-extralight">Кодекс Візажиста</div>
                         </div>
-                        <a href="" target="_blank" class="button pulse"><span class="fixel-semibold">ЗАРЕЄСТРУВАТИСЯ</span><img src="assets/images/arrow-white-2.svg" alt=""></a>
+                        <a href="https://ivansavchuk7.github.io/beauty_show/apply" target="_blank" class="button pulse"><span class="fixel-semibold">ЗАРЕЄСТРУВАТИСЯ</span><img src="assets/images/arrow-white-2.svg" alt=""></a>
                     </div>
                     <img src="assets/images/test.gif" alt="" class="mobile">
                 </div>
