--- a/finish/index.html
+++ b/finish/index.html
@@ -58,8 +58,10 @@
               </div>
               <div class="bottom">
                   <img src="../assets/images/wow-icon.png" alt="" class="abs">
-                  <div class="inner"><img src="../assets/images/checkmark-pink.png" alt=""><span>Доступ до секретних бонусів</span></div>
-                  <div class="inner"><img src="../assets/images/checkmark-pink.png" alt=""><span>Кодекс Візажиста від Єгора Андрюшина</span></div>
+                  <div class="wrapper">
+                      <div class="inner"><img src="../assets/images/checkmark-pink.png" alt=""><span>Доступ до секретних бонусів</span></div>
+                      <div class="inner"><img src="../assets/images/checkmark-pink.png" alt=""><span>Кодекс Візажиста від Єгора Андрюшина</span></div>
+                  </div>
               </div>
           </div>
           <a href="https://t.me/+qMk3jBLEn3M3M2Ji" class="button pulse">
