--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <div class="b">
                         <div class="dot"></div>
                         <div class="text">
-                            Робимо ідеальний <br>нюдовий макіяж в <br>real time
+                            Неймовірне перевтілення <br>в прямому режимі — <br>онлайн майстер клас <br>по макіяжу
                         </div>
                     </div>
                     <div class="c">
@@ -185,7 +185,7 @@
                         </div>
                         <a href="https://ivansavchuk7.github.io/beauty_show/apply" target="_blank" class="button pulse"><span class="fixel-semibold">ЗАРЕЄСТРУВАТИСЯ</span><img src="assets/images/arrow-white-2.svg" alt=""></a>
                     </div>
-                    <img src="assets/images/test.gif" alt="" class="mobile">
+                    <img src="assets/images/expert-bg.gif" alt="" class="mobile">
                 </div>
             </div>
         </section>
