--- a/apply/index.html
+++ b/apply/index.html
@@ -27,7 +27,7 @@
     <meta name="msapplication-square150x150logo" content="../assets/mstile-150x150.png" />
     <meta name="msapplication-wide310x150logo" content="../assets/mstile-310x150.png" />
     <meta name="msapplication-square310x310logo" content="../assets/mstile-310x310.png" />
-    <title>BEAUTY ICON - Реєструйся та одразу отримуй Кодекс Візажиста</title>
+    <title>BEAUTY ICON SHOW - Реєструйся та одразу отримуй секретны бонуси</title>
 </head>
 <body>
     <main>
@@ -35,7 +35,7 @@
             <div class="title">
                 <div>Заповнюй та</div>
                 <div>одразу отримуй</div>
-                <div>Кодекс Візажиста</div>
+                <div>секретні бонуси</div>
             </div>
             <div class="form-wrapper">
                 <form class="custom-form" id="form">
@@ -60,7 +60,7 @@
                         </label>
 
                         <label>
-                            Твоя ціль на курс / запит до мене<br>
+                            Твоя ціль на шоу/запит до мене<br>
                             <input type="text" name="Запит" required>
                         </label>
                     </div>
